--- a/app/src/main/res/layout/musics_layout.xml
+++ b/app/src/main/res/layout/musics_layout.xml
@@ -4,21 +4,16 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
+    android:padding="4dp"
     android:layout_marginBottom="2dp"
-    android:orientation="vertical">
-
-    <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="4dp"
-            android:gravity="center_vertical">
+    android:orientation="horizontal"
+    android:gravity="center_vertical">
 
             <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:background="@drawable/gradient_background">
+                android:background="@drawable/circle_gradient_bg">
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/musicImage"
@@ -50,7 +45,7 @@
             android:layout_gravity="center"
             android:scaleType="fitCenter"
             android:background="@android:color/transparent"
-            app:srcCompat="@drawable/play_icon" />
+            app:srcCompat="@drawable/play_icon"
+            android:contentDescription="Play" />
 
-    </LinearLayout>
 </LinearLayout>
