--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blackShade">#FF181B2C</color>
     <color name="purpleAccent">#FFC35BD1</color>
-    <color name="red">#EF5350</color>
+    <color name="red">#F10707</color>
 </resources>
