--- a/app/src/main/res/layout/playlists_layout.xml
+++ b/app/src/main/res/layout/playlists_layout.xml
@@ -9,69 +9,71 @@
     android:layout_gravity="top|center_vertical"
     android:gravity="center_vertical"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="2dp">
+    android:layout_marginBottom="2dp"
+    android:baselineAligned="false">
 
-        <FrameLayout
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="12dp"
+        android:background="@drawable/square_gradient_bg">
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:elevation="12dp"
-            android:background="@drawable/square_gradient_bg">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:maxWidth="60dp"
-                android:maxHeight="60dp"
-                android:id="@+id/playlists_folder_ImgView"
-                android:src="@drawable/favorite_white"
-                android:layout_gravity="center"
-                android:elevation="12dp"
-                android:contentDescription="Playlist Folder" />
-
-        </FrameLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical"
+            android:maxWidth="60dp"
+            android:maxHeight="60dp"
+            android:id="@+id/playlists_folder_ImgView"
+            android:src="@drawable/favorite_white"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:layout_marginHorizontal="12dp">
+            android:elevation="12dp"
+            android:contentDescription="Playlist Folder" />
 
-            <TextView
-                android:id="@+id/playlistTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:fontFamily="@font/abhaya_libre"
-                android:maxLines="2"
-                android:layout_gravity="start|top"
-                android:gravity="start"
-                android:textStyle="bold"
-                android:text="TextView"
-                android:textColor="@color/white"
-                android:textSize="18sp"/>
-            <TextView
-                android:id="@+id/playlistSubTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:fontFamily="@font/abhaya_libre"
-                android:layout_gravity="start|bottom"
-                android:gravity="start"
-                android:text="Playlist"
-                android:textColor="@color/grey"
-                android:textStyle="bold"
-                android:textSize="15sp"/>
-        </LinearLayout>
-        <CheckBox
-            android:id="@+id/playlist_Checkbox"
-            android:layout_width="28dp"
-            android:layout_height="28dp"
-            android:checked="false"
-            android:button="@null"
-            android:background="@drawable/unchecked_circle"
-            />
+    </FrameLayout>
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:layout_marginHorizontal="12dp">
+
+        <TextView
+            android:id="@+id/playlistTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/abhaya_libre"
+            android:maxLines="2"
+            android:layout_gravity="start|top"
+            android:gravity="start"
+            android:textStyle="bold"
+            android:text="TextView"
+            android:textColor="@color/white"
+            android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/playlistSubTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/abhaya_libre"
+            android:layout_gravity="start|bottom"
+            android:gravity="start"
+            android:text="Playlist"
+            android:textColor="@color/grey"
+            android:textStyle="bold"
+            android:textSize="15sp"/>
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/playlist_remove_Btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@android:color/transparent"
+        android:src="@drawable/playlist_remove"
+        android:contentDescription="Remove" />
+
+</LinearLayout>
