--- a/app/src/main/res/layout/activity_playlist.xml
+++ b/app/src/main/res/layout/activity_playlist.xml
@@ -33,7 +33,7 @@
         android:fontFamily="@font/pattaya"/>
 
     <Button
-        android:id="@+id/newlist_BtnView"
+        android:id="@+id/new_playlist_btn"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
         android:background="@drawable/rounded_button"
@@ -52,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/create_playlist_recView"
-        app:layout_constraintTop_toBottomOf="@id/newlist_BtnView"
+        app:layout_constraintTop_toBottomOf="@id/new_playlist_btn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginVertical="16dp"
