--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,8 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/blackShade</item>
-        <item name="colorSecondary">@color/purpleAccent</item>
+        <item name="colorSecondary">@color/white</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="android:colorAccent">@color/white</item>
     </style>
 </resources>
